gcc/testsuite/rust/rustc/ui/traits/negative-impls/feature-gate-negative_impls.rs
trait MyTrait {}
impl !MyTrait for u32 {} // { dg-error ".E0658." "" { target *-*-* } }
fn main() {}

